[package]
name = "rsa-generic"
version = "0.1.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2021"
description = "Pure Rust RSA implementation - generic version"
license = "MIT OR Apache-2.0"

repository = "https://github.com/kaidokert/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
zeroize = { version = "1.8.1" }

[features]
nightly = []
getrandom = []
pkcs5 = []
serde = []
hazmat = []
pem = []
sha2 = []
std = []
