[package]
name = "rsa_generic"
version = "0.1.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2021"
description = "Pure Rust RSA implementation - generic version"
license = "MIT OR Apache-2.0"

repository = "https://github.com/kaidokert/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"
rust-version = "1.72"

[dependencies]
subtle = { version = "2.1.1", default-features = false }
digest = { version = "=0.11.0-pre.9", default-features = false, features = ["oid"] }
const-oid = { version = "0.10.0-rc.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }

num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
zeroize = { version = "1.8.1" }
fixed-bigint = { path = "../fixed-bigint-rs", version = "0.1.9", optional = true, features=["zeroize","use-unsafe"] }

[features]
default = [ "fixed-bigint" ]
nightly = []
getrandom = []
pkcs5 = []
serde = []
hazmat = []
pem = []
sha2 = []
std = []
