[package]
name = "rsa_generic"
version = "0.1.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2021"
description = "Pure Rust RSA implementation - generic version"
license = "MIT OR Apache-2.0"

repository = "https://github.com/kaidokert/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"
rust-version = "1.72"

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["i128"] }
num-integer = { version = "0.1.39", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
const-oid = { version = "0.10.0-rc.0", default-features = false }
subtle = { version = "2.1.1", default-features = false }
digest = { version = "=0.11.0-pre.9", default-features = false, features = ["oid"] }
signature = { version = "=2.3.0-pre.4", default-features = false, features = ["digest", "rand_core"] }
zeroize = { version = "1.8.1", default-features=false }

# optional dependencies
sha1 = { version = "=0.11.0-pre.4", optional = true, default-features = false, features = ["oid"] }
sha2 = { version = "=0.11.0-pre.4", optional = true, default-features = false, features = ["oid"] }

fixed-bigint = { path = "../fixed-bigint-rs", version = "0.1.9", optional = true, features=["zeroize","use-unsafe"] }
heapless = { version = "0.8.0", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
rand_xorshift = "0.3"
rand_chacha = "0.3"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
sha1 = { version = "=0.11.0-pre.4", default-features = false, features = ["oid"] }
sha2 = { version = "=0.11.0-pre.4", default-features = false, features = ["oid"] }
sha3 = { version = "=0.11.0-pre.4", default-features = false, features = ["oid"] }
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
crypto-bigint = { path= "../crypto-bigint", version = "0.6.0-rc.5", default-features= false, features = ["zeroize" ]}

[features]
default = [ "fixed-bigint", "std" ]
nightly = []
pkcs5 = []
serde = []
hazmat = []
getrandom = ["rand_core/getrandom"]
pem = []
std = ["digest/std", "rand_core/std", "signature/std"]
